# op-core

./: CHANGELOG.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
src/op_core/: __init__.py  auth.py  client.py  exceptions.py  field.py  items.py  opref.py  strings.py
src/op_core/backends/: __init__.py  _filters.py  base.py  caching.py  cli.py  detect.py  file_caching.py  memory.py  sdk.py  stack.py
src/op_core/cli/: __init__.py  __main__.py  cache.py  compose.py  discover.py  emit.py  envfile.py  errors.py  main.py
tests/integration/: test_vaults.py
tests/unit/: cache_helpers.py  test_async_resolver_stack.py  test_auth.py  test_backends.py  test_cache_cli.py  test_caching_backend.py  test_cli_backend.py  test_cli_main.py  test_client.py  test_compose.py  test_detect_backend.py  test_discover.py  test_emit.py  test_envfile.py  test_exceptions.py  test_field.py  test_file_caching_backend.py  test_file_engine.py  test_file_layers.py  test_init.py  test_items.py  test_layer_contract.py  test_memory_backend.py  test_memory_layer.py  test_offline.py  test_opref.py  test_resolver_stack.py  test_sdk_backend.py  test_strings.py
